--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@ padding-bottom:0px;
 display:block;
 width:100%;margin:auto;
 }
+.C2810f62f13b745359512483f3f705e9c{
+padding:5px;
+}
 .Cbff48188a1f3467eb177b919ddf99f76{
 padding-left:10px;
 padding-right:10px;
@@ -54,7 +57,35 @@ padding-bottom:0px;
 padding-left:5%;
 padding-right:5%;
 padding-top:40px;
-padding-bottom:40px;
+padding-bottom:10px;
+margin-left:0%;
+margin-right:0%;
+}
+.Cf6eb259c773b4c0d991186d38d1aceb8{
+display:block;
+width:65%;margin:auto;
+}
+.C6b6fee11e60d42af858cdc9f6fe95f32{
+padding-left:10px;
+padding-right:10px;
+padding-top:0px;
+padding-bottom:0px;
+}
+.C77021a089bcf413e9ba4729617ed909c{
+display:block;
+width:65%;margin:auto;
+}
+.C0098836ef94c49d9a7d45ed911da213a{
+padding-left:10px;
+padding-right:10px;
+padding-top:0px;
+padding-bottom:0px;
+}
+.Cf086319ea1fd4420ab5ace43b2d40e60{
+padding-left:5%;
+padding-right:5%;
+padding-top:10px;
+padding-bottom:10px;
 margin-left:0%;
 margin-right:0%;
 }
@@ -69,6 +100,15 @@ padding-right:10px;
 }
 @media screen and (max-width:450px) {
 .C35ad736365a4494d8351584ddf66ea3e{
+min-width:380px;
+margin-left:0;
+margin-right:0;
+padding-left:10px;
+padding-right:10px;
+}
+}
+@media screen and (max-width:450px) {
+.Cf086319ea1fd4420ab5ace43b2d40e60{
 min-width:380px;
 margin-left:0;
 margin-right:0;
@@ -95,7 +135,7 @@ br {line-height:10px;height:10px;}
 </style>
 <script src="hazel_header/hazel_header_style.js"></script>
 <script src="hazel_footer/hazel_footer_style.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Cabin|&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Noto+Sans|&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -114,7 +154,19 @@ br {line-height:10px;height:10px;}
 <div class="C39a8697c55dc41de9cde8dbbcd3aed7a col-xs-12 col-sm-8">
 <div class="Cddc23b2379ee497b96090ec977002496">
 <div style="text-align:left;">
-<span style ="font-family:'Cabin'; font-size: 18pt;color:rgba(0,0,0,1);">About Ms. Rebecca Byrd<br>
+<span style ="font-family:'Berkshire Swash'; font-size: 18pt;color:rgba(0,0,0,1);">About Mrs. Rebecca Byrd<br>
+</span>
+<br>
+<span style ="font-family:'Berkshire Swash'; font-size: 11pt;color:rgba(0,0,1,1);font-weight:bold;">Hello! <br>
+My name is Rebecca Byrd and I have been Director of Choirs at Kenwood High School for thirteen years; however, my teaching career began twenty-one years ago. I am originally from the Memphis area and received my Bachelor of Music degree and Master of Choral Conducting degree from The University of Mississippi.<br>
+My husband, Payton, and I have three children: Mary, Robert, and JT (Jboo). We also have a very special member of the family, Byrdie Sue, our Yorkipoo. Mary is eighteen and is a Graphic Designer, Robert is sixteen and attends school in Lawrenceburg where he lives with his mother, and Jboo is in the third grade and loves to sing and dance like his momma.<br>
+Even though the main subject I teach is Vocal Music, I also teach General Music and usually a subject outside of the music world. This year, I will be teaching Sociology. Teaching students is my passion and through the subjects I teach, I try to instill lifel lessons that each student can take with them to use in their future. I have been very fortunate to have taught wonderful students throughout my career and have been able to call many family.<br>
+Over the twenty-one years I have taught, I have seen amazing transformations in my students year to year and have grown to love each one of them. I am very proud of my students and what they have accomplished in their lives. This year will be even more amazing with the changes and uncertainties that will be occurring day to day. My love for my students will never change and I am certain we will come out of whatever comes our way stronger and better than ever before. <br>
+Please feel free to contact me for any reason and I will answer your questions or find a way to lead us to the answers needed together. Things might look different this year, but educating, inspiring, and loving my students will never change. I am looking forward to the new opportunities that will come our way this year. Together we will find that we are strong, resilient and that we are all in this together. <br>
+Let’s do this!<br>
+<br>
+<br>
+<br>
 </span>
 </div>
 
@@ -123,7 +175,29 @@ br {line-height:10px;height:10px;}
 </div>
 
 <div class="Cbff48188a1f3467eb177b919ddf99f76 col-xs-12 col-sm-4">
-<img src="index/773T9766.jpg" class="img-fluid C5a4cfc8779cb4d6d87aa69f892613989">
+<img src="index/773T9766.jpg" class="img-fluid C5a4cfc8779cb4d6d87aa69f892613989" alt="" title="">
+<div class="C2810f62f13b745359512483f3f705e9c">
+<br>
+<div style="text-align:left;">
+<span style ="font-family:'Noto Sans'; font-size: 10.5pt;color:rgba(0,0,0,1);">Photos courtesy of Alicia Archuleta @archuletaphotography<br>
+</span>
+</div>
+
+</div>
+
+</div>
+
+</div>
+
+<div class="row Cf086319ea1fd4420ab5ace43b2d40e60">
+
+<div class="C6b6fee11e60d42af858cdc9f6fe95f32 col-xs-12 col-sm-6">
+<img src="index/773T9445%20(2).jpg" class="img-fluid Cf6eb259c773b4c0d991186d38d1aceb8" alt="" title="">
+
+</div>
+
+<div class="C0098836ef94c49d9a7d45ed911da213a col-xs-12 col-sm-6">
+<img src="index/robert%202.jpg" class="img-fluid C77021a089bcf413e9ba4729617ed909c" alt="" title="">
 
 </div>
 
